# earthengine-api

.github/workflows/: ci-build.yml  ci-tests.yml  publish-to-npm.yml  publish-to-pypi.yml
python/: pyproject.toml  setup.py
python/ee/: __init__.py  apitestcase.py  data.py  deprecation.py  oauth.py
python/ee/cli/: commands_test.py
python/ee/tests/: batch_test.py  classifier_test.py  clusterer_test.py  data_test.py  deprecation_test.py  image_test.py  kernel_test.py
