[project]
name = "earthengine-api"
version = "0.1.0"
description = "Earth Engine Python API"
requires-python = ">=3.7"
keywords = [
  "earth",
  "engine",
  "image",
  "analysis",
]
license = {text = "Apache-2.0"}
authors = [
  {name = "Google LLC", email = "noreply@google.com"},
]
classifiers = [
  # Get strings from
  # http://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Multimedia :: Graphics :: Viewers",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = 
  # Note we omit TensorFlow (used by the CLI) here on purpose to avoid
  # an extra 0.5GiB of deps compared to our current 26MiB; Use of TF
  # functionality requires a manual install of TensorFlow.
  "google-cloud-storage",
  "google-api-python-client>=1.12.1",
  "google-auth>=1.4.1",
  "google-auth-httplib2>=0.0.3",
  "httplib2>=0.9.2,<1dev",
  "requests",
]

[project.entry-points."console_scripts"]
earthengine = "ee.cli.eecli:main"

[project.urls]
Homepage = "http://code.google.com/p/earthengine-api"

[project.optional-dependencies]
tests = [
  "pytest",
]

[tool.setuptools]
packages = [
  "ee",
  "ee.cli",
]

[tool.setuptools.package-data]
ee = [
  "tests/*.py",
  "tests/*.json",
]
